2010-05-21

	* libsylph/filter.c: filter_apply(): fixed a bug that MIME flag was
	  not set to filtered messages. This occurred to filtered sent
	  messages.

2010-05-21

	* src/prefs_common_dialog.c
	  src/prefs_filter_edit.c
	  src/prefs_account_dialog.c
	  src/editldap.c: removed warnings 'GtkSpinButton: setting an
	  adjustment with non-zero page size is deprecated'.
	  The last value of gtk_adjustment_new() must be 0 for GtkSpinButton.

2010-05-21

	* libsylph/socket.c: sock_kill_process(): prevent redundant error
	  messages when waitpid() is interrupted by EINTR.

2010-05-20

	* src/compose.c: added "Open" menu in the attach context menu.
	  attach_button_pressed(): modify sensitivity of attach context menu.

2010-05-11

	* src/syldap.c: allow deprecated LDAP API calls (debian BTS #463366).
	  Possibly fixes crash on 64-bit architecture.

2010-05-11

	* src/setup.c: removed debug print.

2010-05-08

	* libsylph/mbox.c: proc_mbox_full(): fixed a bug that MIME flag was
	  not properly set on importing mbox file.

2010-04-23

	* faq/en/sylpheed-faq*: updated Sylpheed FAQ (English)
	  (thanks to Petr Kovar).

2010-04-09

	* libsylph/sylmain.c
	  libsylph/defs.h
	  src/main.c: also load plug-ins from user plug-in directory.

2010-04-07

	* libsylph/defs.h
	  src/prefs_common_dialog.c: made DEFAULT_BROWSER_CMD 'xdg-open'
	  (thanks to Doruk Fisek). Removed obsolete commands.

2010-04-02

	* version 3.0.2

2010-04-02

	* src/folderview.c: folderview_create(): use fixed-height-mode
	  for the GtkTreeView if GTK+ >= 2.12. This fixes random scrolling
	  problem on selecting folders.

2010-03-19

	* src/account_dialog.c: update folder config file after account name
	  changed.

2010-03-19

	* src/main.c
	  src/setup.c
	  src/mainwindow.c: update account and folder config files after
	  creating new accounts.

2010-03-16

	* version 3.0.1

2010-03-12

	* manual/ja/sylpheed.sgml: updated.

2010-03-01

	* src/update_check.c