@@ -1,3 +1,9 @@
+2010-05-24
+
+	* src/main.c: added --instance-id <ID> option, which allows users to
+	  run multiple instances of Sylpheed. There is no extra checks for
+	  config directory, so use with caution.
+
 2010-05-21
 
 	* libsylph/filter.c: filter_apply(): fixed a bug that MIME flag was
